--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -5,6 +5,10 @@
         <title>Detail</title>
     </head>
     <body>
+      <h1>Detail</h1>
+      <p>{{my_object.restaurant_name}}</p>
+      <p style="color: red">{{my_object.food_type}}</p>
+
 
     </body>
 </html>
